@@ -16,6 +16,7 @@ except ImportError:
     requests_utils = None
 
 __version__ = "7.5.0"
+__series__ = '.'.join(__version__.split('.')[:2])
 
 os.environ.setdefault(
     'TRYTOND_APPNAME',
