@@ -1,6 +1,7 @@
 CREATE TABLE ir_configuration (
     id INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL
         CONSTRAINT ir_configuration_id_positive CHECK(id >= 0),
+    series VARCHAR,
     language VARCHAR,
     hostname VARCHAR,
     PRIMARY KEY(id)
