@@ -19,7 +19,7 @@ from werkzeug.wrappers import Request as _Request
 from werkzeug.wrappers import Response
 
 from trytond import backend, security
-from trytond.config import config
+from trytond.config import config, get_hostname
 from trytond.exceptions import RateLimitException, UserError, UserWarning
 from trytond.pool import Pool
 from trytond.tools import cached_property
@@ -191,6 +191,12 @@ def with_pool(func):
     @wraps(func)
     def wrapper(request, database_name, *args, **kwargs):
         database_list = Pool.database_list()
+        if database_name not in database_list:
+            with Transaction().start(None, 0, readonly=True) as transaction:
+                hostname = get_hostname(request.host)
+                db_list = transaction.database.list(hostname=hostname)
+                if database_name not in db_list:
+                    abort(HTTPStatus.NOT_FOUND)
         pool = Pool(database_name)
         if database_name not in database_list:
             with Transaction().start(database_name, 0, readonly=True):
