@@ -1,3 +1,4 @@
+* Limit access to database from the same series
 * Fill wizard state view instance with default value
 * Replace passlib by pwdlib
 * Add size limit for RPC arguments
